--- a/SourceCode/WordSearch/App.xaml
+++ b/SourceCode/WordSearch/App.xaml
@@ -1,18 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Application x:Class="WordSearch.App" xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" xmlns:local="using:WordSearch" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" xmlns:vm="clr-namespace:WordSearch.ViewModel" mc:Ignorable="d">
-
+<Application x:Class="WordSearch.App"
+             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
     <Application.Resources>
-        
-        
         <ResourceDictionary>
-
             <ResourceDictionary.MergedDictionaries>
-
-
+                
                 <ResourceDictionary Source="Common/StandardStyles.xaml" />
-                <ResourceDictionary Source="Common/CustomResources.xaml" />
+                <ResourceDictionary Source="Resources/CustomResources.xaml" />
+                
             </ResourceDictionary.MergedDictionaries>
-
         </ResourceDictionary>
     </Application.Resources>
 </Application>
